= 3.40.0 (2021-01-14)

* Add freeze_template_caches! to the precompile_templates plugin, which ensures all templates are precompiled, and speeds up template access (jeremyevans)

* Add precompile_views to the precompile_templates plugin, which precompiles the optimized render methods (jeremyevans)

* Have RodaCache#freeze return the frozen internal hash (which no longer needs a mutex for thread-safety) (jeremyevans)

* Speed up the view method in the render plugin even more when freezing the application (jeremyevans)

* Speed up the view method in the render plugin when called with a single argument (jeremyevans)

= 3.39.0 (2020-12-15)

* Speed up relative_path plugin if relative_path or relative_prefix is called more than once (jeremyevans)

* Avoid method redefinition warnings in verbose warning mode (jeremyevans)

* Make typecast_params.convert! handle explicit nil values the same as missing values (jeremyevans)

= 3.38.0 (2020-11-16)

* Make error_email and error_mail plugins rescue invalid parameter errors when preparing the email body (jeremyevans)

= 3.37.0 (2020-10-16)

* Add custom_matchers plugin, for supporting arbitrary objects as matchers (jeremyevans)

= 3.36.0 (2020-09-14)

* Add multi_public plugin, for serving files from multiple public directories (jeremyevans)

* Support report-to directive in the content_security_policy plugin (jeremyevans)

* Add Vary response header when using type_routing plugin with Accept request header to prevent caching issues (jeremyevans)

= 3.35.0 (2020-08-14)

* Add r plugin for r method for accessing request, useful when r local variable is not in scope (jeremyevans)

* Warn when loading a plugin with arguments or a block if the plugin does not accept arguments or block (jeremyevans)

= 3.34.0 (2020-07-14)

* Remove unnecessary conditionals (jeremyevans)

* Allow loading the match_affix plugin with a single argument (jeremyevans)
