@@ -1,0 +1,3 @@
+Header2
+<%= yield %>
+Footer2
