@@ -1,3 +1,7 @@
+= master
+
+* Improve view performance with :content option up to 3x by calling compiled template methods directly (jeremyevans)
+
 = 3.40.0 (2021-01-14)
 
 * Add freeze_template_caches! to the precompile_templates plugin, which ensures all templates are precompiled, and speeds up template access (jeremyevans)
